--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "files.exclude": {
-        "node_modules": true,
-        ".gitignore": true,
+        "node_modules": false,
+        ".gitignore": false,
         "cypress.config.js": false,
         "jsconfig.json": true,
         "LICENSE": true,
-        "package-lock.json": true,
+        "package-lock.json": false,
     }
 }
